# morse-over-sock

./: README.md  pyproject.toml
src/morse-over-sock/: __main__.py
