[project]
name = "morse-over-sock"
version = "0.0.0"
description = "Sender/Reciever for Morse Code with auto decrypt and encrypt | School 2023 Summer Break Experiment"
readme = "README.md"
license = {text = "GPL-3.0"}
maintainers = [{name = "Çağan Mert İŞLEK", email = "islekcaganmert@gmail.com"}]
classifiers = [
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent",
    "Programming Language :: Python"
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Donate = "https://www.buymeacoffee.com/islekcaganmert"
Changes = "https://github.com/islekcaganmert/morse-over-sock/commits/main"
"Source Code" = "https://github.com/islekcaganmert/morse-over-sock"
"Issue Tracker" = "https://github.com/islekcaganmert/morse-over-sock/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"